--- a/wiki/ChangeLog.wiki
+++ b/wiki/ChangeLog.wiki
@@ -9,6 +9,12 @@ are at the top. Dates written extra large are release dates. This contains only 
 http://code.google.com/p/v8-juice/source/browse/
 
 ----
+==2009 March 18==
+  * Released new tarball
+
+*2009 March 17*
+  * More work on the sqlite3 plugin. Reimplemented sqlite3_exec() using the newer OO API.
+
 *2009 March 16*
   * Added support for binding JS/C++ member variables (as opposed to functions). Supports all types which work with `CastToJS()` and `CastFromJS()`.
 
