--- a/wiki/ChangeLog.wiki
+++ b/wiki/ChangeLog.wiki
@@ -10,8 +10,8 @@ http://code.google.com/p/v8-juice/source/browse/
 
 ----
 *2009 March 21*
-  * Started adding `ToSource()` API, to convert native types to JS source code. Has some notable limitations but basically works.
-  * Added gzip/gunzip support to [PluginWhio input streams].
+  * Started adding `ToSource()` to convert native types to JS source code. Has some notable limitations but basically works.
+  * Added gzip/gunzip support for [PluginWhio input streams].
 
 ==2009 March 18==
   * Released new tarball
