--- a/wiki/PluginWhefs.wiki
+++ b/wiki/PluginWhefs.wiki
@@ -9,7 +9,7 @@ i recommend [http://code.google.com/p/v8-juice/source/browse/wiki/PluginWhefs.wi
 closer to the version you're working with (follow that link, and there are options to browse all versions).
 
 
-=The whefs I/O plugin=
+=The whefs embedded filesystem plugin=
 
 The whefs plugin is actually an extension of the [PluginsWhio whio plugin], and is loaded
 with it. It builds off of the i/o device API to act as a wrapper for the
@@ -30,6 +30,16 @@ This plugins provides the following features:
 
   * Classes `whefs.WhEfs` ecapsulates access to a virtual/embedded filesystem, as described in detail on the whefs home page.
   * whefs works in conjunction with the `whio.IODevice` API in two ways. First, it can use any back-end storage supported by `IODevice`. Secondly, the "pseudofiles" in the embedded filesystem are accessed using the `IODevice` interface.
+
+==Source code==
+
+This plugin's source code is currently part of the v8-juice core source tree,
+and can be found here:
+
+http://code.google.com/p/v8-juice/source/browse/trunk/src/lib/plugins/whio
+
+_Much_ more information about [http://fossil.wanderinghorse.net/repos/whefs/ whefs]
+can be found on [http://fossil.wanderinghorse.net/repos/whefs/ its home page].
 
 =Important Caveats=
 
@@ -70,29 +80,27 @@ This plugin is actually a part of the whio plugin, and is loaded when that
 plugin is loaded.
 
 When loaded, this plugin will create an object called `whefs` inside the target object
-into which it is added (normally the global object). That `whefs` object holds the rest of the
-classes and functions for this plugin.
+to which it is added (normally the global object). That `whefs` object holds the rest of the classes and functions for this plugin.
 
 The native whio API has huge amounts of API documentation which might be interesting
-to users of this API:
-[http://code.google.com/p/v8-juice/source/browse/trunk/src/lib/plugins/whio/whefs_amalgamation.h whefs_amalgamation.h]
+to users of this API: [http://code.google.com/p/v8-juice/source/browse/trunk/src/lib/plugins whio/whefs_amalgamation.h whefs_amalgamation.h]
 
-But all of the "less technical" info one needs for using it in JS is documented below. For the _real_
-guts see the API documentation
+But all of the "less technical" info one needs for using it in JS is documented below. For all kinds of more details than you'd ever want to know, see the API documentation
 
 =JS usage=
 
 {{{
 load_plugin('v8-juice-whio');
 var fname = "test.whefs";
-var fs = new whefs.WhEfs(fname,true);
-var fi = fs.openDevice("first.file",true);
+var fs = new whefs.WhEfs(fname,true); // open up an existing whefs container
+var fi = fs.openDevice("first.file",true); // open (or create) a file
+fi.truncate(0);
 fi.write("Hi, world!\n");
-fi.close();
-fs.close();
+fi.close(); // close the file
+fs.close(); // close the whefs container
 }}}
 
-The majority of the functionality is provided by the [PluginWhio IODevice class].
+The majority of the functionality is provided by the [PluginWhio IODevice class]. The so-called _pseudofiles_ (files inside a whefs container (also known as a _VFS_ or _embedded filesystem_)) use the exact same i/o interface as `whio.IODevice`, and inherit all usage conventions from that interface.
 
 See below for the complete class and function list.
 
